--- a/app/src/main/res/layout/activity_marksheet.xml
+++ b/app/src/main/res/layout/activity_marksheet.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="160dp"
         android:fitsSystemWindows="true"
         android:theme="@style/Theme.SaitMediator">
 
@@ -27,7 +27,9 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_collapseMode="parallax">
+                app:layout_collapseMode="parallax"
+                app:layout_constraintBottom_toTopOf="@+id/pbranch"
+                app:layout_constraintTop_toTopOf="@+id/pbranch">
 
 
                 <TextView
@@ -37,7 +39,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="Profile"
+                    android:text="Marksheet"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -49,52 +51,41 @@
                     android:id="@+id/pname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="13dp"
                     android:text="Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toEndOf="@+id/Profile_pic"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
                 <TextView
                     android:id="@+id/pbranch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="13dp"
                     android:text="Branch"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@+id/pname"
-                    app:layout_constraintTop_toBottomOf="@+id/pname" />
+                    app:layout_constraintBottom_toTopOf="@+id/prollno"
+                    app:layout_constraintStart_toStartOf="parent" />
+
 
                 <TextView
                     android:id="@+id/psem"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="45dp"
-                    android:layout_marginRight="45dp"
+                    android:layout_marginEnd="35dp"
+                    android:layout_marginRight="35dp"
+                    android:layout_marginBottom="11dp"
                     android:text="Semester"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/prollno"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/prollno" />
-
-                <ImageView
-                    android:id="@+id/Profile_pic"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginBottom="39dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_profile"
-                    app:layout_constraintBottom_toTopOf="@+id/button2"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView3" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <Button
                     android:id="@+id/logout"
@@ -102,8 +93,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="14dp"
-                    android:layout_marginRight="14dp"
+                    android:layout_marginEnd="11dp"
+                    android:layout_marginRight="11dp"
                     android:backgroundTint="@color/purple_500"
                     android:onClick="logout"
                     android:text="@string/logout"
@@ -111,70 +102,25 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="RtlHardcoded,UsingOnClickInXml" />
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="31dp"
-                    android:layout_marginLeft="31dp"
-                    android:layout_marginEnd="34dp"
-                    android:layout_marginRight="34dp"
-                    android:layout_marginBottom="10dp"
-                    android:backgroundTint="@color/purple_500"
-                    android:text="Marks"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/psem"
-                    app:layout_constraintStart_toEndOf="@+id/button2" />
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:backgroundTint="@color/purple_500"
-                    android:text="Attendance"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
                 <TextView
                     android:id="@+id/prollno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="11dp"
                     android:text="@string/roll_no"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="@+id/pbranch"
-                    app:layout_constraintTop_toBottomOf="@+id/pbranch" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_editor_absoluteX="10dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:baselineAlignBottom="false"
-    android:clickable="true"
-    android:src="@drawable/ic_settings"
-    app:fabSize="normal"
-    app:layout_anchor="@id/appbar"
-    app:layout_anchorGravity="end|bottom"
-    android:layout_margin="20dp"
-    android:backgroundTint="@color/purple_200"/>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dynamic_list"
+        android:id="@+id/marks_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="0"
