--- a/app/src/main/res/layout-v21/activity_dashboard.xml
+++ b/app/src/main/res/layout-v21/activity_dashboard.xml
@@ -112,7 +112,7 @@
                     tools:ignore="RtlHardcoded,UsingOnClickInXml" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/marks"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -132,7 +132,7 @@
                     app:layout_constraintStart_toEndOf="@+id/button2" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/attendance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
